# learn-media

./: .gitignore  package-lock.json  package.json  vite.config.ts
crates/common/log/: Cargo.toml
crates/common/log/examples/: log_test.rs
crates/common/log/src/: config.rs  formatter.rs  layers.rs  lib.rs  logger.rs
crates/network/http/: Cargo.toml
crates/network/http/examples/: httpserver.rs
crates/network/http/src/: handlers.rs  lib.rs  middleware.rs  users.rs
src-cpp/: CMakeLists.txt  main.cpp  vcpkg.json
src-cpp/cmake/: copy_dlls_if_missing.cmake
src-cpp/modules/common/: CMakeLists.txt
src-cpp/modules/common/config/: CMakeLists.txt
src-cpp/modules/common/config/src/: config_manager.cpp
src-cpp/modules/common/config/test/: CMakeLists.txt  test_async_config.cpp
src-cpp/modules/common/log/: CMakeLists.txt
src-cpp/modules/common/log/src/: logger.cpp  logmanager.cpp
src-cpp/modules/common/pool/: CMakeLists.txt
src-cpp/modules/common/queue/: CMakeLists.txt
src-cpp/modules/common/queue/test/: CMakeLists.txt  test_mpsc_queue.cpp  test_spsc_queue.cpp
src-cpp/modules/common/src/: common.cpp  config_manager.cpp  logger.cpp  logmanager.cpp
src-cpp/modules/common/test/: CMakeLists.txt  test_async_config.cpp
src-cpp/modules/filter/: CMakeLists.txt
src-cpp/modules/filter/frameratecontrol/: CMakeLists.txt
src-cpp/modules/filter/frameratecontrol/include/: adaptive_policy.h  clock_policy.h  compose_policy.h  controller_adapter.h  fixed_policy.h  frame_rate_types.h  i_controller.h  i_policy.h  pace_controller.h  pid_policy.h  queue_controller.h  queue_policy.h  sample_controller.h  tokenbucket_policy.h
src-cpp/modules/filter/frameratecontrol/src/: controller_adapter.cpp  frame_rate_types.cpp  pace_controller.cpp  policies.cpp  queue_controller.cpp  sample_controller.cpp
src-cpp/modules/filter/frameratecontrol/test/: CMakeLists.txt  test_frameratecontrol.cpp
src-cpp/modules/filter/osd/: CMakeLists.txt  osd.md
src-cpp/modules/filter/osd/include/: font_8x16.h  i_osdrender.h  nv12_osdrender.h  osd_batch.h  osd_color.h  osd_element.h  osd_node.h  yuv420_osdrender.h
src-cpp/modules/filter/osd/src/: nv12_osdrender.cpp  osd_geometry.h  osd_node.cpp  yuv420_osdrender.cpp
src-cpp/modules/filter/osd/test/: CMakeLists.txt  test_osd_renderers.cpp
src-cpp/modules/grpc/: CMakeLists.txt
src-cpp/modules/grpc/demo/: frame_sender_demo.cpp  hello_demo.cpp  hello_grpc_service.cpp  hello_grpc_service.h
src-cpp/modules/grpc/include/grpc/: frame_ingest_client.h  grpc_client.h  grpc_server.h
src-cpp/modules/grpc/proto/: hello.proto  video_frame.proto
src-cpp/modules/grpc/script/: generate-proto.ps1
src-cpp/modules/grpc/src/: frame_ingest_client.cpp  grpc_client.cpp  grpc_server.cpp
src-cpp/modules/inference/: CMakeLists.txt  inference.md
src-cpp/modules/inference/inferenceengine/: CMakeLists.txt
src-cpp/modules/inference/inferenceengine/src/: openvino_engine.cpp  openvino_request_pool.cpp
src-cpp/modules/inference/inferenceinfo/: CMakeLists.txt
src-cpp/modules/inference/inferencesession/: CMakeLists.txt
src-cpp/modules/inference/inferencesession/src/: session.cpp
src-cpp/modules/inference/infernode/: CMakeLists.txt
src-cpp/modules/inference/infernode/src/: async_inference_node.cpp
src-cpp/modules/inference/model/: CMakeLists.txt
src-cpp/modules/inference/model/src/: yolo_model.cpp
src-cpp/modules/inference/postprocessor/: CMakeLists.txt
src-cpp/modules/inference/postprocessor/src/: openvino_postprocessor.cpp
src-cpp/modules/inference/preprocessor/: CMakeLists.txt
src-cpp/modules/inference/preprocessor/src/: openvino_preprocessor.cpp
src-cpp/modules/inference/tensordata/: CMakeLists.txt
src-cpp/modules/inference/test/: CMakeLists.txt  yolo_image_demo.cpp
src-cpp/modules/media/: CMakeLists.txt  build_all.ps1  build_media.ps1
src-cpp/modules/media/decoder/: CMakeLists.txt  build.ps1
src-cpp/modules/media/decoder/src/: decode_node.cpp  ffmpeg_decoder.cpp
src-cpp/modules/media/decoder/test/: CMakeLists.txt  test_decoder_stream_source.cpp  test_ffmpeg_decoder.cpp
src-cpp/modules/media/defines/: CMakeLists.txt  build.ps1
src-cpp/modules/media/defines/src/: ffmpeg_frame_buffer.cpp  ffmpeg_packet_buffer.cpp  media_buffer.cpp  media_frame.cpp  media_packet.cpp
src-cpp/modules/media/defines/test/: CMakeLists.txt  test_media_frame.cpp  test_media_packet.cpp
src-cpp/modules/media/demo/: CMakeLists.txt  runtime_multi_port_demo.cpp  runtime_transcode_demo.cpp
src-cpp/modules/media/encoder/: CMakeLists.txt  build.ps1
src-cpp/modules/media/encoder/src/: encode_node.cpp  ffmpeg_encoder.cpp
src-cpp/modules/media/encoder/test/: CMakeLists.txt  test_ffmpeg_encoder.cpp
src-cpp/modules/media/puller/: CMakeLists.txt  build.ps1
src-cpp/modules/media/puller/src/: ffmpeg_puller.cpp  pull_stream_node.cpp
src-cpp/modules/media/puller/test/: CMakeLists.txt  test_ffmpeg_puller.cpp  test_ipuller.cpp  test_stream_source.cpp
src-cpp/modules/media/pusher/: CMakeLists.txt  build.ps1
src-cpp/modules/media/pusher/src/: ffmpeg_protocol_adapter.cpp  ffmpeg_pusher.cpp  push_stream_node.cpp
src-cpp/modules/media/pusher/test/: CMakeLists.txt  test_pusher_interface.cpp
src-cpp/modules/media/runtime/: CMakeLists.txt  README.md  build.ps1  runtime.md
src-cpp/modules/media/stream/: CMakeLists.txt  build.ps1
src-cpp/modules/media/stream/src/: stream_session.cpp  stream_source.cpp
src-cpp/modules/pipeline/: CMakeLists.txt
src-cpp/modules/pipeline/include/pipeline/: pipeline_types.h
src-cpp/modules/render/: CMakeLists.txt
src-cpp/modules/render/demo/: CMakeLists.txt  texture.cpp  trig_rect.cpp
src-cpp/modules/render/include/render/: frame_converter.h  i_video_renderer.h  opengl_video_renderer.h  render_config.h  (+2 more)
src-cpp/modules/render/src/: frame_converter.cpp  opengl_video_renderer.cpp  render_node.cpp
src-cpp/modules/render/test/: CMakeLists.txt  test_frame_converter.cpp  test_render_node.cpp
src-cpp/modules/runtime/: CMakeLists.txt  build.ps1  runtime.md
src-cpp/script/: build-module.ps1  build.md  path.ini
(+142 files in other folders)
