[package]
name = "media-ai-log"
version = "0.1.0"
edition = "2024"
[lib]
path = "src/lib.rs"


[dependencies]
# ========== 日志核心 ==========
tracing = "0.1"

# ========== 日志处理 ==========
# 日志订阅器：支持环境变量过滤、JSON格式、ANSI颜色
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
# 日志文件追加器：支持日志文件轮转
tracing-appender = "0.2"

# ========== 序列化 ==========
# 序列化框架：用于数据结构序列化
serde = { version = "1", features = ["derive"] }
# JSON 序列化：用于 JSON 格式日志输出
serde_json = "1"

# ========== 时间处理 ==========
# 时间处理库：用于日志时间戳格式化
time = { version = "0.3", features = ["formatting", "macros"] }

# ========== 错误处理 ==========
# 错误处理：简化错误处理和传播
anyhow = "1"